# quant-system

./: .env.example  .gitignore  1.txt  2.txt  3.txt  README.md  docker-compose.yml  pyproject.toml
apps/monitor_dashboard/: main.py
apps/research_api/: main.py
apps/risk_service/: main.py
apps/scheduler/: main.py
apps/signal_worker/: main.py
apps/trader_gateway/: main.py
apps/web_api/: __init__.py  artifacts.py  audit.py  auth.py  backtest_candidates.py  candidate_quality.py  deployment.py  equivalence.py  hummingbot_status.py  jobs.py  live_readiness_summary.py  main.py  operation_guide.py  paper_observation_disposition.py  parameter_scans.py  readiness_disposition.py  readiness_disposition_state.py  readiness_evidence.py  result_views.py  schedules.py  state_db.py  status.py  strategy_configs.py  strategy_portfolios.py  trading_terminal.py  workflows.py
apps/web_frontend/: index.html  package-lock.json  package.json
data/samples/: binance_1h_candles.csv
docs/: architecture.md  backtesting.md  code_structure_map.md  data_layer.md  deployment.md  risk_policy.md  roadmap.md  strategy_lifecycle.md  v0_feature_inventory.md  web_dashboard.md
ops/: run_phase_6_6_live_once_low_funds_50.sh
reports/live_readiness/: crypto_relative_strength_v1_phase_6_1_daily_report.json  crypto_relative_strength_v1_phase_6_1_daily_report.md  crypto_relative_strength_v1_phase_6_1_live_readiness.json  crypto_relative_strength_v1_phase_6_1_live_readiness.md  crypto_relative_strength_v1_phase_6_2_credential_allowlist_review.json  (+15 more)
strategies/btc_trend_v1/: README.md  config.yml  (+2 more)
(+76 files in other folders)
